# paperflow

./: .gitignore  README.md  config.yaml  coverage.xml  debug_citations.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  overleaf-sync.yml
docs/: bibtex.html  index.html  paper.html
docs/assets/: script.js  style.css  theme.css
scripts/: build_website.py  latex_to_html.py
src/paper/: bibliography.bib  main.tex
src/web/assets/: style.css
src/web/templates/: base.html  index.html
tests/: conftest.py  test_build_website.py  test_citation.py  test_latex_to_html.py
